src/tests/test-src/errors/E51-non-array-loop.syntran
// E51: non-array-loop
// The range expression of a for loop is not an array

let n = 5;
for i in n
{
}
